--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "next-intl": "^3.17.1",
     "react": "^18",
     "react-dom": "^18",
+    "react-icons": "^5.2.1",
     "tailwindcss": "^3.4.6"
   },
   "devDependencies": {
