--- a/package.json
+++ b/package.json
@@ -9,12 +9,16 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "cleave.js": "^1.6.0",
     "gsap": "^3.12.5",
     "next": "14.2.5",
     "next-intl": "^3.17.1",
     "react": "^18",
     "react-dom": "^18",
     "react-icons": "^5.2.1",
+    "react-input-mask": "^2.0.4",
+    "react-password-strength-bar": "^0.4.1",
+    "react-phone-input-2": "^2.15.1",
     "sharp": "^0.33.4",
     "tailwindcss": "^3.4.6"
   },
@@ -22,6 +26,7 @@
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
+    "@types/react-input-mask": "^3.0.5",
     "eslint": "^8",
     "eslint-config-next": "14.2.5",
     "postcss": "^8",
