--- a/package.json
+++ b/package.json
@@ -2,17 +2,28 @@
   "name": "vekmed",
   "version": "0.1.0",
   "private": true,
+  "type": "module",
   "scripts": {
-    "dev": "next dev",
+    "front": "next dev",
+    "back": "nodemon --watch backend backend/index.js",
+    "dev": "concurrently \"npm run front\" \"npm run back\"",
     "build": "next build",
     "start": "next start",
     "lint": "next lint"
   },
   "dependencies": {
+    "axios": "^1.7.3",
+    "bcrypt": "^5.1.0",
     "cleave.js": "^1.6.0",
+    "dotenv": "^16.4.5",
+    "express": "^4.19.2",
+    "framer-motion": "^11.3.21",
+    "fs-extra": "^11.2.0",
     "gsap": "^3.12.5",
+    "js-cookie": "^3.0.5",
     "next": "14.2.5",
     "next-intl": "^3.17.1",
+    "node-fetch": "^3.3.2",
     "react": "^18",
     "react-dom": "^18",
     "react-icons": "^5.2.1",
@@ -20,15 +31,19 @@
     "react-password-strength-bar": "^0.4.1",
     "react-phone-input-2": "^2.15.1",
     "sharp": "^0.33.4",
-    "tailwindcss": "^3.4.6"
+    "tailwindcss": "^3.4.6",
+    "telegraf": "^4.16.3",
+    "telegraf-session-local": "^2.1.1"
   },
   "devDependencies": {
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
     "@types/react-input-mask": "^3.0.5",
+    "concurrently": "^8.2.2",
     "eslint": "^8",
     "eslint-config-next": "14.2.5",
+    "nodemon": "^3.1.4",
     "postcss": "^8",
     "typescript": "^5"
   }
